--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply plugin: 'hyperskill'
+    apply plugin: 'java'
 
     repositories {
         mavenCentral()
@@ -27,11 +27,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.slf4j:slf4j-log4j12:2.0.5'
+
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+
+    testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.3.13.RELEASE'
     runtimeOnly 'com.h2database:h2-mvstore:2.1.210'
 }
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+
+}
+ext['junit-jupiter.version'] = '5.9.0'
