--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8881
+server.port=8080
 server.error.include-message=always
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
@@ -8,5 +8,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:../recipe_db
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.defer-datasource-initialization=true
+#---
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:recipe_db
+spring.datasource.username=test
+spring.datasource.password=test
